--- a/sleeperdashboard/index.html
+++ b/sleeperdashboard/index.html
@@ -23,25 +23,33 @@
                 <th>Status</th>
             </tr>
         </thead>
+        <tbody></tbody>
     </table>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script>
     $(document).ready(function() {
-        $('#example').DataTable({
-            "ajax": "https://raw.githubusercontent.com/potternate/potternate.github.io/main/sleeperdashboard/newsleeperdiscounts.csv",
-            "columns": [
-                { "data": "Date" },
-                { "data": "Player" },
-                { "data": "Sport" },
-                { "data": "Prop" },
-                { "data": "Original" },
-                { "data": "Discounted" },
-                { "data": "Percentage" },
-                { "data": "Actual" },
-                { "data": "Status" }
-            ]
+        Papa.parse("https://raw.githubusercontent.com/potternate/potternate.github.io/main/sleeperdashboard/newsleeperdiscounts.csv", {
+            download: true,
+            header: true,
+            complete: function(results) {
+                $('#example').DataTable({
+                    data: results.data,
+                    columns: [
+                        { data: 'Date' },
+                        { data: 'Player' },
+                        { data: 'Sport' },
+                        { data: 'Prop' },
+                        { data: 'Original' },
+                        { data: 'Discounted' },
+                        { data: 'Percentage' },
+                        { data: 'Actual' },
+                        { data: 'Status' }
+                    ]
+                });
+            }
         });
     });
     </script>
